--- a/index.html
+++ b/index.html
@@ -241,6 +241,36 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__image"
+              />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Architecto qui suscipit obcaecati quibusdam perferendis iure
+                sequi consequuntur ipsa, ratione deserunt. Omnis sit aperiam
+                eius nobis rem qui unde dolosrem lborfe. Lorem, ipsum dolor sit
+                amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- 
     <section class="grid-test">
