feat: add a popup

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#section-tours" class="navigation__link"
               ><span>03</span>Popular tours</a
             >
           </li>
@@ -59,7 +59,9 @@
           <span class="heading-primary--main">Outdoors</span
           ><span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated"
+          >Discover our tours</a
+        >
       </div>
     </header>
 
@@ -170,7 +172,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -201,7 +203,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -232,7 +234,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$597</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -263,7 +265,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -445,6 +447,42 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-medium">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Id diam vel quam elementum. Malesuada bibendum arcu vitae elementum
+            curabitur vitae nunc sed velit. In iaculis nunc sed augue lacus
+            viverra. Magna ac placerat vestibulum lectus mauris ultrices eros.
+            Orci eu lobortis elementum nibh tellus molestie nunc non. Massa sed
+            elementum tempus egestas. Libero volutpat sed cras ornare arcu dui.
+            Sit amet purus gravida quis blandit turpis cursus in hac. Molestie a
+            iaculis at erat pellentesque adipiscing commodo. Magna etiam tempor
+            orci eu lobortis. Iaculis eu non diam phasellus vestibulum lorem
+            sed. Magna eget est lorem ipsum dolor sit amet. Lacus vestibulum sed
+            arcu non odio euismod lacinia. Est ullamcorper eget nulla facilisi
+            etiam dignissim diam. Pellentesque pulvinar pellentesque habitant
+            morbi tristique senectus. Rhoncus dolor purus non enim praesent
+            elementum facilisis leo. Vitae tortor condimentum lacinia quis vel.
+            Nec tincidunt praesent semper feugiat. Convallis aenean et tortor at
+            risus viverra!
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
     <!-- 
     <section class="grid-test">
       <div class="row">
