feat: add responsiveness for Popup

--- a/index.html
+++ b/index.html
@@ -451,8 +451,16 @@
     <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
-          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
-          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+          <img
+            src="img/nat-8.jpg"
+            alt="Tour photo"
+            class="popup__img popup__img--one"
+          />
+          <img
+            src="img/nat-9.jpg"
+            alt="Tour photo"
+            class="popup__img popup__img--two"
+          />
         </div>
         <div class="popup__right">
           <a href="#section-tours" class="popup__close">&times;</a>
@@ -471,13 +479,7 @@
             Sit amet purus gravida quis blandit turpis cursus in hac. Molestie a
             iaculis at erat pellentesque adipiscing commodo. Magna etiam tempor
             orci eu lobortis. Iaculis eu non diam phasellus vestibulum lorem
-            sed. Magna eget est lorem ipsum dolor sit amet. Lacus vestibulum sed
-            arcu non odio euismod lacinia. Est ullamcorper eget nulla facilisi
-            etiam dignissim diam. Pellentesque pulvinar pellentesque habitant
-            morbi tristique senectus. Rhoncus dolor purus non enim praesent
-            elementum facilisis leo. Vitae tortor condimentum lacinia quis vel.
-            Nec tincidunt praesent semper feugiat. Convallis aenean et tortor at
-            risus viverra!
+            sed. Magna eget est lorem ipsum dolor sit amet!
           </p>
           <a href="#" class="btn btn--green">Book now</a>
         </div>
